spacing below username fixed

--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -89,7 +89,7 @@
     padding: 0 !important;
     overflow: hidden;
     position: relative;
-    height: 362px;
+    height: 326px;
 }
 
 .userInfo-profile-image-box {
